select-click works for first comment, improved behavior around empty lines. explainthis toggle no longer swells on error. supress vestigial horizontal scroll in exercises mode

--- a/src/haz3lweb/www/style/cursor-inspector.css
+++ b/src/haz3lweb/www/style/cursor-inspector.css
@@ -86,7 +86,6 @@
 }
 #cursor-inspector .ci-header.error .toggle-switch {
   background-color: var(--R2);
-  border: none;
 }
 #cursor-inspector .ci-header.error .toggle-switch .toggle-knob {
   color: var(--R2);
