--- a/src/haz3lweb/www/style/exercise-mode.css
+++ b/src/haz3lweb/www/style/exercise-mode.css
@@ -17,6 +17,7 @@
 
 #main.Exercises .cell {
   width: auto;
+  min-width: auto;
 }
 
 #main.Exercises .cell-caption {
