--- a/src/haz3lweb/www/style/toggle.css
+++ b/src/haz3lweb/www/style/toggle.css
@@ -12,9 +12,9 @@
   background-color: var(--shard-exp);
   border-radius: 2em;
   cursor: pointer;
-  border: solid 1px var(--BR1);
   box-shadow: inset 1px 1px 9px -3px rgb(4 4 4 / 8%),
     1px 2px 6px -2px rgb(0 0 0 / 1%);
+  border: solid 1px transparent;
 }
 
 .toggle-switch:hover {
